Update styl.css to correct overflow in coll-box

--- a/css/styl.css
+++ b/css/styl.css
@@ -302,6 +302,7 @@ p.fff{
     background-color: rgba(255,255,255,0.6);
     margin: 0 0 40px 0;
     border-radius: 5px 5px 0 0;
+	overflow:hidden;
 }
 .res-details{
     padding:10px;
